# cheapt

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.exceptions.toml  deny.patch.toml  deny.toml  rate_limits.toml  rustfmt.toml
.github/workflows/: actionlint.yml  build-docker.yml  cargo-deny.yml  formatting.yml  linter.yml  sparkles.yml
entity/: Cargo.toml
entity/src/: blacklist.rs  lib.rs  message_cache.rs  prelude.rs  rate_limit.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240114_000001_create_table.rs
src/: completion.rs  context_extraction.rs  gcra.rs  gcre.rs  invocation_builder.rs  main.rs  mcp.rs  mcp_config.rs  message_cache.rs  rate_limit_config.rs  rate_limiter.rs
src/handler/: admin.rs  completion.rs  mod.rs  opt_out.rs
templates_example/: preprompt.txt
