[workspace]
members = [".", "entity", "migration"]

[package]
name = "cheapt"
description = "OpenAI based chat bot for discord. Plain and simple. Requires OpenAI API key."
repository = "https://github.com/chrisliebaer/cheapt"
version = "0.1.0"
keywords = ["discord", "chat", "bot", "openai"]
edition = "2021"
license = "MIT"
categories = ["games"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
miette = { version = "5.10", features = ["fancy"] }
semver = "1.0"
chrono = "0.4"
serde = "1.0"
toml = "0.8"
uuid = "1.6"
lazy_static = "1.4"
tokio = { version = "1.35", features = ["macros", "rt", "time"] }
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono", "with-uuid"] }

async-openai = "0.18"
envconfig = "0.10"
poise = "0.6"
regex = "1.10"
tera = "1"

[dev-dependencies]
ctor = "0.2"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono", "with-uuid", "mock"] }
