[workspace]
members = [".", "entity", "migration"]
resolver = "2"

[workspace.dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
miette = { version = "7.0", features = ["fancy"] }
semver = "1.0"
chrono = "0.4"
serde = "1.0"
toml = "0.8"
uuid = "1.7"
lazy_static = "1.4"
tokio = { version = "1.35", features = ["macros", "rt", "time"] }
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono", "with-uuid"] }

async-openai = "0.23"
envconfig = "0.10"
poise = "0.6"
regex = "1.10"
tera = "1"
rand = "0.8"
humantime = "2.1"

[package]
name = "cheapt"
description = "OpenAI based chat bot for discord. Plain and simple. Requires OpenAI API key."
repository = "https://github.com/chrisliebaer/cheapt"
version = "0.1.0"
keywords = ["discord", "chat", "bot", "openai"]
edition = "2021"
license = "MIT"
categories = ["games"]
publish = false


[dependencies]
entity.workspace = true
migration.workspace = true

async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
semver.workspace = true
chrono.workspace = true
serde.workspace = true
toml.workspace = true
uuid.workspace = true
lazy_static.workspace = true
tokio.workspace = true
sea-orm.workspace = true

async-openai.workspace = true
envconfig.workspace = true
poise.workspace = true
regex.workspace = true
tera.workspace = true
rand.workspace = true
humantime.workspace = true
log = "0.4.20"

[dev-dependencies]
ctor = "0.2"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono", "with-uuid", "mock"] }
