[workspace]
members = [".", "entity", "migration"]
resolver = "2"

[workspace.dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
miette = { version = "7.0", features = ["fancy"] }
semver = "1.0"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
toml = "0.9"
uuid = "1.7"
lazy_static = "1.4"
tokio = { version = "1.35", features = ["macros", "rt", "time"] }
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono", "with-uuid"] }

envconfig = "0.11"
poise = "0.6"
regex = "1.10"
tera = "1"
rand = "0.9"
humantime = "2.1"
log = "0.4"

llm = { path = "llm", features = ["openai"] }
rmcp = { version = "0.6.0", features = [
    "client",
    "transport-sse-client",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-client",
    "transport-child-process"] }
reqwest = "0.12"

[package]
name = "cheapt"
description = "OpenAI based chat bot for discord. Plain and simple. Requires OpenAI API key."
repository = "https://github.com/chrisliebaer/cheapt"
version = "0.1.0"
keywords = ["discord", "chat", "bot", "openai"]
edition = "2021"
license = "MIT"
categories = ["games"]
publish = false


[dependencies]
entity.workspace = true
migration.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
semver.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
lazy_static.workspace = true
tokio.workspace = true
sea-orm.workspace = true

envconfig.workspace = true
poise.workspace = true
regex.workspace = true
tera.workspace = true
rand.workspace = true
humantime.workspace = true
log.workspace = true

llm.workspace = true
rmcp.workspace = true
reqwest.workspace = true

[dev-dependencies]
ctor = "0.5"
tempfile = "3.0"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono", "with-uuid", "mock"] }

# poise uses serenity 0.12.2, which is currently broken, we need to use 0.12.1 for now
[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", tag = "v0.12.1" }
