[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12"
features = ["sqlx-mysql", "runtime-tokio-rustls", "with-chrono", "with-uuid"]
